# Rust-Keras-Like

./: Cargo.toml  README.md  test.model
lib/: activations.rs  layers.rs  losses.rs  mod.rs  models.rs  optimizers.rs  prelude.rs  utils.rs
src/: main.rs
